manifest/app4/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app4-deployment
spec:
  selector:
    matchLabels:
      app: app4
  template:
    metadata:
      labels:
        app: app4
    spec:
      containers:
      - name: app
        image: gcr.io/nnyn-dev/ingress-tester:latest
        args: ["0.0.0.0:8081"]
        readinessProbe:
          httpGet:
            port: 8081
            path: "/podreadiness"
          initialDelaySeconds: 10
        livenessProbe:
          httpGet:
            port: 8081
            path: "/podliveness"
          initialDelaySeconds: 10
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "--http_port=8082",
          "--backend=localhost:8081",
          "--service=app3.endpoints.nnyn-dev.cloud.goog",
          "--rollout_strategy=managed",
        ]
        readinessProbe:
          httpGet:
            port: 8082
            path: "/podreadiness"
          initialDelaySeconds: 10
        livenessProbe:
          httpGet:
            port: 8082
            path: "/podliveness"
          initialDelaySeconds: 10
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8082
...
---
apiVersion: v1
kind: Service
metadata:
  name: app4-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: app4
  ports:
  - port: 8082
    targetPort: 8082
...
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app4-ingress
spec:
  rules:
  - http:
      paths:
        - path: /*
          backend:
            serviceName: app4-service
            servicePort: 8082
